added 'from_feb' functionality
updated version requirement for febio_python

--- a/notebooks/lv/demos/export_to_febio_not_yet_final_but_works.ipynb
+++ b/notebooks/lv/demos/export_to_febio_not_yet_final_but_works.ipynb
@@ -73,35 +73,12 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FEBio_feb:\n",
-       "-> Module: 0\n",
-       "-> Control: 19\n",
-       "-> Material: 2\n",
-       "--> material 'Holzapfel_Ogden_PAQ': 13\n",
-       "--> material 'rigid body': 2\n",
-       "-> Globals: 1\n",
-       "-> Boundary: 1\n",
-       "-> Loads: 1\n",
-       "-> Discrete: 2\n",
-       "-> LoadData: 3\n",
-       "-> Output: 1\n",
-       "-> MeshData: 0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from febio_python.feb import FEBio_feb\n",
-    "feb_template_path = Path(\"../sample_files/sample_lv_template.feb\")\n",
-    "feb = FEBio_feb.from_file(feb_template_path)\n",
-    "feb"
+    "# lv.to_json(\"sample_lvhex_wfibers.json\", \n",
+    "#            nodeset_enums=[LV_SURFS],\n",
+    "#            surfaces_oi_enums=[LV_SURFS],\n",
+    "#            mesh_cell_data=[LV_FIBERS.F0.value, LV_FIBERS.S0.value, LV_FIBERS.N0.value])"
    ]
   },
   {
@@ -110,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_NODES = lv.mesh.n_points"
+    "N_NODES = lv.mesh.n_points\n",
+    "N_NODES_AORTIC = len(lv.get_bc(\"AORTIC_BC\")[1][\"RIM_NODES\"])"
    ]
   },
   {
@@ -143,7 +121,44 @@
        "--> material 'Holzapfel_Ogden_PAQ': 13\n",
        "--> material 'rigid body': 2\n",
        "-> Globals: 1\n",
-       "-> Geometry: 9\n",
+       "-> Boundary: 1\n",
+       "-> Loads: 1\n",
+       "-> Discrete: 2\n",
+       "-> LoadData: 3\n",
+       "-> Output: 1\n",
+       "-> MeshData: 0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from febio_python.feb import FEBio_feb\n",
+    "# ----------------------\n",
+    "# Read template file\n",
+    "feb_template_path = Path(\"../sample_files/sample_lv_template.feb\")\n",
+    "feb = FEBio_feb.from_file(feb_template_path)\n",
+    "feb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FEBio_feb:\n",
+       "-> Module: 0\n",
+       "-> Control: 19\n",
+       "-> Material: 2\n",
+       "--> material 'Holzapfel_Ogden_PAQ': 13\n",
+       "--> material 'rigid body': 2\n",
+       "-> Globals: 1\n",
+       "-> Geometry: 24\n",
        "--> Nodes 'LV': 64452\n",
        "--> Nodes 'AORTIC_RIM': 128\n",
        "--> Nodes 'MITRAL_RIM': 128\n",
@@ -158,40 +173,25 @@
        "-> MeshData: 1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from febio_python.feb import FEBio_feb\n",
-    "feb_template_path = Path(\"../sample_files/sample_lv_template.feb\")\n",
-    "feb = FEBio_feb.from_file(feb_template_path)\n",
-    "\n",
     "# ----------------------\n",
     "# Add Nodes\n",
     "feb.add_nodes([\n",
     "  {\"name\": \"LV\", \n",
     "   \"nodes\": np.round(lv.nodes(), 4),\n",
     "   },\n",
-    "  ])\n",
-    "\n",
-    "feb.add_nodes([\n",
     "  {\"name\": \"AORTIC_RIM\", \n",
     "   \"nodes\": np.round(lv.get_bc(\"AORTIC_BC\")[1][\"RIM_NODES\"], 4)\n",
     "   },\n",
-    "  ],\n",
-    "  initial_el_id= N_NODES + 1)\n",
-    "\n",
-    "N_NODES_AORTIC = len(lv.get_bc(\"AORTIC_BC\")[1][\"RIM_NODES\"])\n",
-    "\n",
-    "feb.add_nodes([\n",
     "  {\"name\": \"MITRAL_RIM\", \n",
     "   \"nodes\": np.round(lv.get_bc(\"MITRAL_BC\")[1][\"RIM_NODES\"], 4)\n",
     "   },\n",
-    "  ],\n",
-    "  initial_el_id= N_NODES + N_NODES_AORTIC + 1)\n",
-    "\n",
+    "  ])\n",
     "\n",
     "# ----------------------\n",
     "# Add Elements\n",
@@ -201,29 +201,24 @@
     "    \"type\": \"tet4\",\n",
     "    \"mat\": \"1\",\n",
     "    \"elems\": lv.cells(VTK_ELEMENTS.TETRA) + 1\n",
-    "    }\n",
-    "  ])\n",
-    "\n",
-    "feb.add_elements([\n",
+    "    },\n",
     "  {\n",
     "    \"name\": \"AORTIC_RIM_ELEMS\", \n",
     "    \"type\": \"quad4\",\n",
     "    \"mat\": \"2\",\n",
-    "    \"elems\": aortic_bc[LV_RIM.ELEMENTS.value] + N_NODES + 1\n",
-    "    }\n",
-    "  ])\n",
-    "\n",
-    "N_ELEMS_AORTIC = len(aortic_bc[LV_RIM.ELEMENTS.value])\n",
-    "\n",
-    "feb.add_elements([\n",
+    "    \"elems\": aortic_bc[LV_RIM.ELEMENTS.value] + N_NODES + 1 # adjust element ids\n",
+    "    },\n",
     "  {\n",
     "    \"name\": \"MITRAL_RIM_ELEMS\", \n",
     "    \"type\": \"quad4\",\n",
     "    \"mat\": \"2\",\n",
-    "    \"elems\": mitral_bc[LV_RIM.ELEMENTS.value] + N_NODES + N_NODES_AORTIC + 1\n",
+    "    \"elems\": mitral_bc[LV_RIM.ELEMENTS.value] + N_NODES + N_NODES_AORTIC + 1 # adjust element ids\n",
     "    }\n",
-    "  ], \n",
-    "  initial_el_id = N_ELEMS_AORTIC + 1)\n",
+    "  ])\n",
+    "\n",
+    "# ----------------------\n",
+    "# Add Nodesets\n",
+    "feb.add_nodesets(lv.get_nodesets_from_enum(LV_SURFS))\n",
     "\n",
     "# ----------------------\n",
     "# Add Surfaces\n",
@@ -231,12 +226,16 @@
     "\n",
     "# ----------------------\n",
     "# Add Discrete set\n",
-    "feb.add_discretesets({\"AORTIC_RIM_ELEMS\": adjusted_discrete_sets[\"AORTIC_BC\"]})\n",
-    "feb.add_discretesets({\"MITRAL_RIM_ELEMS\": adjusted_discrete_sets[\"MITRAL_BC\"]})\n",
+    "feb.add_discretesets(\n",
+    "  {\"AORTIC_RIM_ELEMS\": adjusted_discrete_sets[\"AORTIC_BC\"],\n",
+    "   \"MITRAL_RIM_ELEMS\": adjusted_discrete_sets[\"MITRAL_BC\"]}\n",
+    "  )\n",
     "\n",
+    "# modify existing discrete_set name from template\n",
     "discrete = feb.discrete()\n",
     "discrete.find(\"discrete\").attrib[\"discrete_set\"] = \"AORTIC_RIM_ELEMS\"\n",
     "\n",
+    "# add new 'discrete element to template\n",
     "import xml.etree.ElementTree as ET\n",
     "subel = ET.SubElement(discrete, \"discrete\")\n",
     "subel.set(\"discrete_set\",\"MITRAL_RIM_ELEMS\")\n",
@@ -255,8 +254,20 @@
     "    }\n",
     "  ])\n",
     "\n",
-    "feb.write(\"../sample_files/sample_lv_template_mod.feb\")\n",
+    "# ----------------------\n",
+    "# Check modified feb object\n",
     "feb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ----------------------\n",
+    "# Save\n",
+    "feb.write(\"../sample_files/sample_lv_template_mod.feb\")"
    ]
   }
  ],
