fix error on vtkOriginalPointIds for quadratic meshs (pyvista error)

--- a/notebooks/lv/tests/test_metrics_ideal.ipynb
+++ b/notebooks/lv/tests/test_metrics_ideal.ipynb
@@ -19,200 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d73501870814c5e88a734a758ca8f2d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(position=(50000.000000…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "filepath = Path(\"../sample_files/ellipsoid_2.stl\")\n",
-    "lv = LV.from_file(filepath)\n",
-    "lv.identify_regions(LV_GEO_TYPES.IDEAL,\n",
-    "    endo_epi_args={\"threshold\":85,})\n",
-    "lv.transform_region_to_facet_data(LV_MESH_DATA.SURFS)\n",
-    "lv.plot(\"surface\", \n",
-    "        scalars=LV_MESH_DATA.SURFS,\n",
-    "        container=\"points\",\n",
-    "        show_edges=True,\n",
-    "        categorical=True,\n",
-    "        split_sharp_edges=True,\n",
-    "        smooth_shading=False,\n",
-    "        pretty=False,\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "with open(\"../sample_files/spk_json.json\", \"r\") as spk_file:\n",
-    "  spk_json = json.load(spk_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for spk_data in spk_json:\n",
-    "  if spk_data[\"from_nodeset\"] == \"endo\":\n",
-    "    spk_data[\"from_nodeset\"] = LV_SURFS.ENDO.value\n",
-    "  elif spk_data[\"from_nodeset\"] == \"epi\":\n",
-    "    spk_data[\"from_nodeset\"] = LV_SURFS.EPI.value\n",
-    "  else:\n",
-    "    print(spk_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for spk_data in spk_json:\n",
-    "  lv.create_speckles(**spk_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4ec97ee1a0a461895e21ba4739d80ad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(position=(50000.000000…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "lv.set_region_from_speckles(\"TEST-circ-6\", spk_collection=\"circ-6\")\n",
-    "lv.plot(scalars=\"TEST-circ-6\", categorical=True, cmap=\"jet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76370a184edc4af18c0d3936f09c9ff8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(position=(50000.000000…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "lv.set_region_from_speckles(\"TEST-circ-6\", spk_name=\"superapex\", spk_collection=\"circ-6\")\n",
-    "lv.plot(scalars=\"TEST-circ-6\", categorical=True, cmap=\"tab20_r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48a8af901bd1436b98837a3f67fe472a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(position=(50000.000000…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "lv.set_region_from_speckles(\"TEST-circ-6\", spk_group=\"epi\", spk_collection=\"circ-6\")\n",
-    "lv.plot(scalars=\"TEST-circ-6\", categorical=True, cmap=\"jet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9740b53740c54b85a3b0a745a9642b64",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(position=(50000.000000…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "lv.set_region_from_speckles(\"TEST-circ-6\", spk_collection=\"long-6\")\n",
-    "lv.plot(scalars=\"TEST-circ-6\", categorical=True, cmap=\"jet\", show_edges=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.        , 0.78539816, 1.57079633, 2.35619449])"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linspace(0, np.pi, 4, endpoint=False)"
+    "filepath = Path(\"C:/Users/igorp/Downloads/0.3_80.00_50.00_LVIDEAL_HEX20.xplt\")"
    ]
   },
   {
@@ -224,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d761cc73a52f42abbc742df095f5f46c",
+       "model_id": "3a9821e054014dd3a7a9cb89b2a49df1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,10 +56,9 @@
    "source": [
     "lv = LV.from_file(filepath)\n",
     "lv.identify_regions(LV_GEO_TYPES.IDEAL,\n",
-    "    apex_base_args={\"ql\":0.075, \"qh\":0.975},\n",
+    "    apex_base_args={\"ab_ql\":0.03, \"ab_qh\":0.90},\n",
     "    endo_epi_args={\"threshold\":85,})\n",
-    "lv.transform_region_to_facet_data(LV_MESH_DATA.SURFS)\n",
-    "lv.plot(\"surface\", \n",
+    "lv.plot(\"mesh\", \n",
     "        scalars=LV_MESH_DATA.SURFS,\n",
     "        container=\"points\",\n",
     "        show_edges=True,\n",
@@ -256,6 +66,10 @@
     "        split_sharp_edges=True,\n",
     "        smooth_shading=False,\n",
     "        pretty=False,\n",
+    "        vnodes=[\n",
+    "            (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
+    "            (LV_VIRTUAL_NODES.APEX, \"red\")\n",
+    "            ],\n",
     "        )"
    ]
   },
@@ -268,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5259a05404a04e549dd5c85c8175d884",
+       "model_id": "32ab5fac78d0440e8529a8f5fd4338e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -402,12 +216,20 @@
     "    )\n",
     "\n",
     "lv.set_region_from_speckles(\"long-6\", spk_collection=\"long-6\")\n",
-    "lv.plot(scalars=\"long-6\", categorical=True, cmap=\"jet\")"
+    "lv.plot(\n",
+    "    scalars=\"long-6\", \n",
+    "    categorical=True, \n",
+    "    cmap=\"jet\",\n",
+    "    vnodes=[\n",
+    "            (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
+    "            (LV_VIRTUAL_NODES.APEX, \"red\")\n",
+    "            ],\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +349,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb9ef524d12c4f93bfeff1e4df809bd0",
+       "model_id": "84886e0457e0466a9d5e29836a8bd817",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,7 +365,7 @@
     "import logging\n",
     "names = [\"subapex\", \"apex\", \"superapex\", \"submid\", \"mid\", \"supermid\", \"subbase\", \"base\", \"superbase\"]\n",
     "\n",
-    "for i, a in enumerate(np.linspace(0.1, 0.90, len(names), endpoint=False)):\n",
+    "for i, a in enumerate(np.linspace(0.1, 1.0, len(names), endpoint=False)):\n",
     "    \n",
     "    spk = lv.create_speckles(\n",
     "        collection=\"circ-6\",\n",
@@ -578,8 +400,30 @@
     "    )\n",
     "\n",
     "lv.set_region_from_speckles(\"circ-6\", spk_collection=\"circ-6\")\n",
-    "lv.plot(scalars=\"circ-6\", categorical=True, cmap=\"jet\")"
+    "lv.plot(\n",
+    "    scalars=\"circ-6\", \n",
+    "    categorical=True, \n",
+    "    cmap=\"jet\",\n",
+    "    vnodes=[\n",
+    "            (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
+    "            (LV_VIRTUAL_NODES.APEX, \"red\")\n",
+    "            ],\n",
+    "    )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compute Geometric Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
