added interpolation method

--- a/notebooks/lv/demos/interpolating_or_regressing_data.ipynb
+++ b/notebooks/lv/demos/interpolating_or_regressing_data.ipynb
@@ -96,6 +96,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.36349216, -0.13751394, -0.92139208, ...,  0.7643902 ,\n",
+       "         0.60938722,  0.2106059 ],\n",
+       "       [ 0.36065748, -0.13563121, -0.92278403, ...,  0.76554145,\n",
+       "         0.60821707,  0.20980536],\n",
+       "       [ 0.3615074 , -0.12937113, -0.92335016, ...,  0.771975  ,\n",
+       "         0.59687785,  0.21861253],\n",
+       "       ...,\n",
+       "       [-0.23657123,  0.92997088,  0.27966766, ...,  0.96735052,\n",
+       "         0.19929231,  0.15445711],\n",
+       "       [-0.25424458,  0.92125816,  0.29111517, ...,  0.9639329 ,\n",
+       "         0.21763387,  0.15194692],\n",
+       "       [-0.25036823,  0.91332002,  0.3210328 , ...,  0.96447344,\n",
+       "         0.20681805,  0.16338385]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lv_dst.mesh.clear_data()\n",
+    "to_interpolate = [LV_FIBERS.F0, LV_FIBERS.S0, LV_FIBERS.N0]\n",
+    "lv_dst.interpolate_from_other(lv_src, to_interpolate)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
