--- a/notebooks/lv/tests/test_scripthandler.ipynb
+++ b/notebooks/lv/tests/test_scripthandler.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('C:/Users/igorp/HEYHEYHEY/lv_4_coarse.2ef')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from project_heart.modules.script_handler import ScriptHandler as sh\n",
     "\n",
@@ -28,7 +17,47 @@
     "\n",
     "    }\n",
     "\n",
-    "sh.resolve_output_filename(input_data)"
+    "outputpath = sh.resolve_output_filename(input_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\igorp\\\\HEYHEYHEY\\\\lv_4_coarse_mamamia.vtk'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sh.change_ext(outputpath, \".vtk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\igorp\\\\HEYHEYHEY\\\\lv_4_coarse_mamamia.3ef'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(outputpath).replace(\".2ef\", \".3ef\")"
    ]
   }
  ],
