--- a/notebooks/lv/tests/Geometrics/radial_distance_and_radial_length.ipynb
+++ b/notebooks/lv/tests/Geometrics/radial_distance_and_radial_length.ipynb
@@ -4650,6 +4650,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the image above, we can see that, for an ideal case, radial distance based on fixed vector and moving vector overlap each other; which is expected as the base region is fixed in the XY plane and, consequently, the normal vector should not change throughout the timesteps."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
