added initial documentation

--- a/docs/source/demos/core/tetrahedralize.ipynb
+++ b/docs/source/demos/core/tetrahedralize.ipynb
@@ -13,15 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from project_heart.lv import LV\n",
-    "import numpy as np\n",
-    "import pyvista as pv\n",
-    "pv.set_jupyter_backend(\"pythreejs\")\n",
-    "\n",
-    "import os\n",
     "from pathlib import Path\n",
+    "from project_heart.lv import LV\n",
+    "from project_heart.utils import set_jupyter_backend\n",
+    "from project_heart.enums import *\n",
     "\n",
-    "from project_heart.enums import *"
+    "set_jupyter_backend(\"pythreejs\")"
    ]
   },
   {
@@ -30,8 +27,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv = LV.from_pyvista_read(\"../sample_files/lvtetmesh.vtk\") # load reference mesh (can also be done from other methods)\n",
-    "lv.tetrahedralize(backend=TETRA_BACKEND.WILDMESHING, stop_quality=1000)\n",
+    "sample_file = Path(\"../sample_files/lvtetmesh.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tetrahedralize with WILDMESHING backend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "lv = LV.from_file(sample_file) \n",
+    "lv.mesh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.tetrahedralize(backend=TETRA_BACKEND.WILDMESHING, stop_quality=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lv.plot(show_edges=True)"
    ]
   },
@@ -45,12 +76,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "lv.mesh.save(\"../sample_files/lvtetmesh_verycoarse.vtk\")"
+    "## Tetrahedralize with TETGEN backend"
    ]
   },
   {
@@ -59,8 +88,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv = LV.from_pyvista_read(\"../sample_files/lvtetmesh.vtk\") # load reference mesh (can also be done from other methods)\n",
-    "lv.tetrahedralize(backend=TETRA_BACKEND.TETGEN, order=1, mindihedral=0.0, minratio=2.0)\n",
+    "%%capture\n",
+    "lv = LV.from_file(sample_file) \n",
+    "lv.mesh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.tetrahedralize(backend=TETRA_BACKEND.TETGEN, order=1, mindihedral=0.0, minratio=2.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lv.plot(show_edges=True)"
    ]
   },
@@ -71,15 +118,6 @@
    "outputs": [],
    "source": [
     "lv.mesh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv.mesh.save(\"../sample_files/lvtetmesh_coarse.vtk\")"
    ]
   }
  ],
