--- a/notebooks/lv/demos/tetrahedralize.ipynb
+++ b/notebooks/lv/demos/tetrahedralize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,24 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a461a229bee458fa9d99cd853fb32e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "lv = LV.from_pyvista_read(\"../sample_files/lvtetmesh.vtk\") # load reference mesh (can also be done from other methods)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "lv = LV.from_pyvista_read(\"../sample_files/lvtetmesh.vtk\") # load reference mesh (can also be done from other methods)\n",
     "lv.tetrahedralize(backend=TETRA_BACKEND.WILDMESHING, stop_quality=1000)\n",
@@ -45,46 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<table>\n",
-       "<tr><th>UnstructuredGrid</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>17246</td></tr>\n",
-       "<tr><td>N Points</td><td>5194</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-2.197e+01, 5.638e+01</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-3.899e+01, 4.334e+01</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-4.719e+01, 3.677e+01</td></tr>\n",
-       "<tr><td>N Arrays</td><td>0</td></tr>\n",
-       "</table>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "UnstructuredGrid (0x12401fbde20)\n",
-       "  N Cells:\t17246\n",
-       "  N Points:\t5194\n",
-       "  X Bounds:\t-2.197e+01, 5.638e+01\n",
-       "  Y Bounds:\t-3.899e+01, 4.334e+01\n",
-       "  Z Bounds:\t-4.719e+01, 3.677e+01\n",
-       "  N Arrays:\t0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lv.mesh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,24 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3432253e90ad407aba4ad810fbc096bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lv = LV.from_pyvista_read(\"../sample_files/lvtetmesh.vtk\") # load reference mesh (can also be done from other methods)\n",
     "lv.tetrahedralize(backend=TETRA_BACKEND.TETGEN, order=1, mindihedral=0.0, minratio=2.0)\n",
@@ -119,46 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<table>\n",
-       "<tr><th>UnstructuredGrid</th><th>Information</th></tr>\n",
-       "<tr><td>N Cells</td><td>218359</td></tr>\n",
-       "<tr><td>N Points</td><td>64452</td></tr>\n",
-       "<tr><td>X Bounds</td><td>-2.198e+01, 5.639e+01</td></tr>\n",
-       "<tr><td>Y Bounds</td><td>-3.899e+01, 4.336e+01</td></tr>\n",
-       "<tr><td>Z Bounds</td><td>-4.722e+01, 3.682e+01</td></tr>\n",
-       "<tr><td>N Arrays</td><td>0</td></tr>\n",
-       "</table>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "UnstructuredGrid (0x12404118460)\n",
-       "  N Cells:\t218359\n",
-       "  N Points:\t64452\n",
-       "  X Bounds:\t-2.198e+01, 5.639e+01\n",
-       "  Y Bounds:\t-3.899e+01, 4.336e+01\n",
-       "  Z Bounds:\t-4.722e+01, 3.682e+01\n",
-       "  N Arrays:\t0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lv.mesh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,10 +87,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "364647f439eeb51cea9fa1ad47f7b03a5a9ed5157a0ffe2dd43bcec2d09df37e"
+   "hash": "a4b270fe5129ef310552b5197d637a230d47119f1e46f0b92ff32b1c5f5c5425"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 (conda)",
+   "display_name": "Python 3.9.7 ('project_heart')",
    "language": "python",
    "name": "python3"
   },
